objects/Training_Course__c.object
<CustomObject>
    <label>Training Course</label>
    <nameField>
        <displayFormat>TC{0000}</displayFormat>
        <label>Course Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Training Courses</relationshipLabel>
        <relationshipName>Training_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N0202807 User Training</fullName>
                </value>
                <value>
                    <fullName>N0202808 System Manager Training</fullName>
                </value>
                <value>
                    <fullName>N0202608 Report Designer Training</fullName>
                </value>
                <value>
                    <fullName>N0202609 On-site Standard Training</fullName>
                </value>
                <value>
                    <fullName>N0202613 On-site Tailored Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Courses</relationshipLabel>
        <relationshipName>Training_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SFDC_Resource__c</referenceTo>
        <relationshipLabel>Training Courses</relationshipLabel>
        <relationshipName>R00N30000001uixzEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Number__c</fullName>
        <inlineHelpText>Enter any one of the following: SMA Contract Number, SAP SO Number, Customer PO</inlineHelpText>
        <label>Charge Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Tuition__c</fullName>
        <label>Course Tuition</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <label>Training Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>